Adding local development tools
- readme
- parkage.json
- yarn.lock for yarn package manager

--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "chatluthier",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "local": "npm run start",
+    "yarn:local": "yarn run start",
+    "npm:local": "npm run start"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2"
