--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "devDependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-fileupload": "^1.5.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-fileupload": "^1.5.0"
   }
 }
