--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,12 @@ jobs:
       # Step 4: Copy the necessary files to the remote server
       - name: Copy files to remote server
         run: |
-          scp -r public ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
-          scp -r assets ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
-          scp server.js ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
-          scp credits.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
-          scp package-lock.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
+          scp -v -r public ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
+          scp -v -r assets ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
+          scp -v server.js ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
+          scp -v credits.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
+          scp -v package-lock.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
+          scp -v package.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
       # Step 5: Update server configuration and restart the service
       - name: Update server and restart
         run: |
