--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           scp -v -r public ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
           scp -v -r assets ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
           scp -v server.js ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
-          scp -v credits.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
+          scp -v backgroundCredits.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
           scp -v package-lock.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
           scp -v package.json ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
       # Step 5: Update server configuration and restart the service
