--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       # Step 4: Copy the necessary files to the remote server
       - name: Copy files to remote server
         run: |
-          scp -v -r ./ ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
+          scp -v -r . ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
       # Step 5: Update server configuration and restart the service
       - name: Update server and restart
         run: |
