--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,37 +3,36 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # Trigger on push to main branch
+      - main  # Trigger on push to the main branch
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code from the repository
-      - name: Checkout code
-        uses: actions/checkout@v3  # Using the latest version of the checkout action
-
-      # Step 2: Set up SSH
       - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.4  # Configure SSH agent
+        uses: webfactory/ssh-agent@v0.5.4
         with:
-          ssh-private-key: ${{ secrets.CHATLUTHIER_PEM }}  # Access the SSH key from GitHub Secrets
+          ssh-private-key: ${{ secrets.YOUR_SSH_PRIVATE_KEY }}  # SSH key for accessing the server
 
       - name: Add EC2 Host to Known Hosts
         run: |
-          ssh-keyscan -H ec2-13-60-6-122.eu-north-1.compute.amazonaws.com >> ~/.ssh/known_hosts  # Add the EC2 host to known hosts
+          ssh-keyscan -H ec2-13-60-6-122.eu-north-1.compute.amazonaws.com >> ~/.ssh/known_hosts  # Ensure SSH connection works smoothly
+      
+      - name: Initialize Git if not existing
+        run: |
+          ssh ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com"
+          if [ ! -d '/home/ec2-user/chatluthier/.git' ]; then
+            git init /home/ec2-user/chatluthier
+            git -C /home/ec2-user/chatluthier remote add origin git@github.com:benmiaou/chatluthier.git
+            git -C /home/ec2-user/chatluthier pull origin main
+          fi"
 
-      # Step 3: Clear the target directory on the remote server
-      - name: Clear remote directory
+      - name: Pull latest code
         run: |
-          ssh ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com "rm -rf /home/ec2-user/chatluthier/assets/*"
+          ssh ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com "cd /home/ec2-user/chatluthier && git pull origin main"
 
-      # Step 4: Copy the necessary files to the remote server
-      - name: Copy files to remote server
+      - name: Restart server
         run: |
-          scp -v -r . ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com:/home/ec2-user/chatluthier
-      # Step 5: Update server configuration and restart the service
-      - name: Update server and restart
-        run: |
-          ssh ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com "cd /home/ec2-user/chatluthier && find . -type f \\( -name '*.js' -o -name '*.html' \\) -exec sed -i 's|http://127.0.0.1:3000|https://chatluthier.org|g' {} \\; && pm2 restart all"
+          ssh ec2-user@ec2-13-60-6-122.eu-north-1.compute.amazonaws.com "pm2 restart all"
