--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.4
         with:
-          ssh-private-key: ${{ secrets.YOUR_SSH_PRIVATE_KEY }}  # SSH key for accessing the server
+          ssh-private-key: ${{ secrets.CHATLUTHIER_PEM }}  # SSH key for accessing the server
 
       - name: Add EC2 Host to Known Hosts
         run: |
