--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,14 +36,14 @@ jobs:
       - name: Get the current Git SHA
         id: git_sha
         run: |
-          SHA=$(ssh -i chatluthier.pem ec2-user@chatluthier.org "git rev-parse --short HEAD") # Get the short Git SHA
+          SHA=$(ssh -i chatluthier.pem ec2-user@chatluthier.org "cd /home/ec2-user/chatluthier && git rev-parse --short HEAD") # Get the short Git SHA
           echo "::set-output name=sha::$SHA" # Store it for later use
       - name: Update the Service Worker cache name
         run: |
             SHA="${{ steps.git_sha.outputs.sha }}"
             SW_FILE="public/service-worker.js" # Adjust the path to your Service Worker
             # Update the cache name in the Service Worker
-            sed -i "s/const CACHE_NAME = 'site-cache-v1'/const CACHE_NAME = 'site-cache-$SHA'/" $SW_FILE
+            ssh -i chatluthier.pem ec2-user@chatluthier.org "cd /home/ec2-user/chatluthier && sed -i "s/const CACHE_NAME = 'site-cache-v1'/const CACHE_NAME = 'site-cache-$SHA'/" $SW_FILE"
 
       - name: Restart server
         run: |
