--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,10 @@ jobs:
       - name: Update the Service Worker cache name
         run: |
             SHA="${{ steps.git_sha.outputs.sha }}"
-            SW_FILE="public/service-worker.js" # Adjust the path to your Service Worker
+            SW_FILE="public/service-worker.js" # Path to your Service Worker
             # Update the cache name in the Service Worker
-            ssh -i chatluthier.pem ec2-user@chatluthier.org "cd /home/ec2-user/chatluthier && sed -i "s/const CACHE_NAME = 'site-cache-v1'/const CACHE_NAME = 'site-cache-$SHA'/" $SW_FILE"
+            ssh -i chatluthier.pem ec2-user@chatluthier.org "cd /home/ec2-user/chatluthier && sed -i 's/const CACHE_NAME = '\''site-cache-v1'\''/const CACHE_NAME = '\''site-cache-${SHA}'\''/' ${SW_FILE}"
+        
 
       - name: Restart server
         run: |
