--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.11.0",
     "firebase-admin": "^12.1.0",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ws": "^8.17.0"
   }
 }
