--- a/package.json
+++ b/package.json
@@ -1,24 +1,47 @@
 {
   "name": "chatluthier",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Le Chat Luthier is your immersive sound companion for enhancing role-playing games, storytelling sessions, or any experience that benefits from atmospheric audio. Use `npm run local` or `npm run npm:local` to start the local development server.",
+  "main": "main.js",
   "scripts": {
-    "local": "npm run start",
-    "yarn:local": "yarn run start",
-    "npm:local": "npm run start"
+    "build": "webpack --config webpack.config.js",
+    "watch": "webpack --watch --config webpack.config.js",
+    "start": "webpack --config webpack.config.js && node server.js",
+    "dev": "node server.js",
+    "local": "npm run dev",
+    "npm:local": "npm run dev",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^8.4.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.11.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^10.11.0",
     "firebase-admin": "^12.1.0",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
     "ws": "^8.17.0"
-  }
+  },
+  "keywords": [
+    "sound",
+    "role-playing",
+    "audio",
+    "soundboard",
+    "ambiance",
+    "storytelling",
+    "gaming"
+  ],
+  "author": "Benjamin Thibault",
+  "license": "ISC"
 }
