--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^8.4.1",
     "clean-webpack-plugin": "^4.0.0",
     "concurrently": "^9.1.0",
@@ -21,7 +22,9 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "postcss": "^8.4.49",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.15",
     "webpack": "^5.96.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.2"
@@ -29,6 +32,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "postcss-loader": "^8.1.1",
     "ws": "^8.17.0"
   },
   "keywords": [
