--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "package.json": "^2.0.1",
     "postcss-loader": "^8.1.1",
     "ws": "^8.17.0"
   },
