--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
