--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-auth-library": "^9.15.1",
     "ws": "^8.17.0"
   },
   "keywords": [
