--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "watch": "webpack --watch --config webpack.config.js",
     "start": "webpack --config webpack.config.js && node srv/server.js",
     "dev": "node srv/server.js",
+    "dev:watch": "concurrently \"webpack --watch --config webpack.config.js\" \"nodemon srv/server.js\"",
+    "dev:server": "nodemon srv/server.js",
+    "dev:client": "webpack serve --config webpack.config.js",
     "local": "npm run dev",
     "npm:local": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,11 +20,13 @@
     "@babel/preset-env": "^7.26.0",
     "babel-loader": "^8.4.1",
     "clean-webpack-plugin": "^4.0.0",
+    "concurrently": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.11.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "nodemon": "^3.1.10",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^4.10.0",
